# duckdb-odps

./: CMakeLists.txt  extension_config.cmake  storage_api.py  vcpkg.json
docs/: USAGE.md
src/: odps_extension.cpp  odps_reader.cpp  odps_sql_executor.cpp  odps_storage_reader.cpp  odps_table_function.cpp  odps_tunnel_reader.cpp
src/include/: odps_extension.hpp  odps_reader.hpp  odps_sql_executor.hpp  odps_storage_reader.hpp  odps_table_function.hpp  odps_tunnel_reader.hpp
test/sql/: odps.test
